--- a/main.css
+++ b/main.css
@@ -4,8 +4,7 @@ div,
 image,
 h1,
 p,
-a,
-video {
+a {
   margin: 0;
   padding: 0;
 }
@@ -13,7 +12,7 @@ video {
 html,
 body {
   height: 100%;
-  zoom: 80%;
+  zoom: 100%
 }
 
 body {
@@ -92,6 +91,11 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.videoWrapper > video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
   left: 0;
 }
@@ -130,22 +134,3 @@ img {
     background-color: ;
     color: black;
 }
-
-
-/* Page content */
-.content {
-  padding: 16px;
-}
-
-/* The sticky class is added to the navbar with JS when it reaches its scroll position */
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 60px;
-}
-
