--- a/main.css
+++ b/main.css
@@ -134,3 +134,15 @@ img {
     background-color: ;
     color: black;
 }
+
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
